# toxic-text-detection

./: .gitignore  README.md  main.py  pyproject.toml  tokenizer.py
backend/: app.py
frontend/: index.html  script.js  style.css
notebooks/: Notebook.ipynb
utils/: nltk_download.py
